--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/shop-homepage.css" rel="stylesheet">
-  <title>React App</title>
+  <title>Book</title>
 </head>
 
 <body>
