--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/shop-homepage.css" rel="stylesheet">
-  <title>Book</title>
+  <link href="css/slick.min.css" rel="stylesheet">
+  <link href="css/slick-theme.min.css" rel="stylesheet">
+  <title>Candere.com</title>
 </head>
 
 <body>
