--- a/index.html
+++ b/index.html
@@ -1,113 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
 
-    <title>Shop Homepage - Start Bootstrap Template</title>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+  <title>Shop Homepage - Start Bootstrap Template</title>
 
-    <!-- Custom styles for this template -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
-      rel="stylesheet"
-    />
-    <link href="css/homepage.css" rel="stylesheet" />
-  </head>
+  <!-- Bootstrap core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet" />
 
-  <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-default fixed-top menu-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarResponsive"
-          aria-controls="navbarResponsive"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#"
-                >Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Work</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Resume</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Shop</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
+  <!-- Custom styles for this template -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
+  <link href="css/homepage.css" rel="stylesheet" />
+</head>
+
+<body>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-default fixed-top menu-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Start Bootstrap</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Resume</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Shop</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <!-- Page Content -->
-    <section id="home_page" class="main_banner banner_bg">
-      <div class="home_container">
-        <div class="design_animaiton banner_content text-center">
-          <span class="sm_title">Welcome!</span>
-          <p class="animated_text">
-            I'm <span class="animated_span">Web Developer</span>
-          </p>
-        </div>
-        <div class="designation_ sub_title">
-          <span>Designer</span>
-          <span>Developer</span>
-          <span>APP Developer</span>
-        </div>
-        <div class="social banner_social_link">
-          <span>fb</span>
-          <span>twitter</span>
-          <span>in</span>
-          <span>insta</span>
-          <span>be</span>
-        </div>
+  <!-- Page Content -->
+  <section id="home_page" class="main_banner banner_bg">
+    <div class="home_container">
+      <div class="design_animaiton banner_content text-center">
+        <span class="sm_title">Welcome!</span>
+        <h1 class="animated_text">
+          <span class="wn_span">I'm</span><span class="animated_span"></span>
+        </h1>
       </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">
-          Copyright &copy; Your Website 2019
-        </p>
+      <div class="designation_ sub_title">
+        <span>Designer</span>
+        <span>Developer</span>
+        <span>APP Developer</span>
       </div>
-      <!-- /.container -->
-    </footer>
+      <div class="social banner_social_link">
+        <span>fb</span>
+        <span>twitter</span>
+        <span>in</span>
+        <span>insta</span>
+        <span>be</span>
+      </div>
+    </div>
+  </section>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-  </body>
+  <!-- Footer -->
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">
+        Copyright &copy; Your Website 2019
+      </p>
+    </div>
+    <!-- /.container -->
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/typed.min.js" type="text/javascript"></script>
+  <script>
+    var typed = new Typed('.animated_span', {
+      // Waits 1000ms after typing "First"
+      typeSpeed: 150,
+      backSpeed: 50,
+      backDelay: 120,
+      cursorChar: '_',
+      shuffle: true,
+      smartBackspace: false,
+      loop: true,
+      strings: ['Lorem Ipsum', 'Web Designer.', 'Web Developer.']
+    });
+  </script>
+</body>
+
 </html>
