--- a/index.html
+++ b/index.html
@@ -16,9 +16,23 @@
 
 </head>
 
+<style>
+    .bg {
+        background-color: #eee;
+    }
+</style>
+
 <body>
-    <section class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="5s">test</section>
-    <section class="wow slideInRight" data-wow-offset="10" data-wow-iteration="10">test</section>
+    <div class="container">
+        <div class="row">
+            <div class="six columns bg">
+                test1
+            </div>
+            <div class="six columns bg">
+                test1
+            </div>
+        </div>
+    </div>
 
     <script>
         new WOW().init();
