--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Home Page</title>
-    <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/fonts.css" />
+    <link rel="stylesheet" href="css/animate.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/owl.carousel.js"></script>
     <script src="js/wow.min.js"></script>
+  </head>
 
-</head>
-
-<body>
-    <section class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="5s">test</section>
-    <section class="wow slideInRight" data-wow-offset="10" data-wow-iteration="10">test</section>
-
+  <body>
+    <section class="popular">
+      <div class="container">
+        <div class="row">
+          <div class="heading_">
+            <div class="heading_wrapper">
+              <h3 class="main_heading">Welcome to Candere</h3>
+              <p>lorem ipsum</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script>
-        new WOW().init();
+      new WOW().init();
     </script>
-</body>
-
+  </body>
 </html>
