--- a/index.html
+++ b/index.html
@@ -1,33 +1,239 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/fonts.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<body>
+  <body>
     <section>
-        <header>
-            <div class="container">
-                <nav class="menu">
-                    <div class="logo">Logo</div>
-                    <ul>
-                        <li><a href="#" class="active">Home</a></li>
-                        <li><a href="#">Category</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
+      <header>
+        <div class="container">
+          <nav class="menu">
+            <div class="logo">Logo</div>
+            <ul>
+              <li><a href="#" class="active">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Category</a></li>
+              <li><a href="#">Pages</a></li>
+              <li><a href="#">Features</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
     </section>
-</body>
-
+    <section class="mb_50">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-12 col-md-6">
+            <div class="hero_"><img src="images/dummy.jpg" /></div>
+          </div>
+          <div class="col-12 col-md-6">
+            <div class="hero_content">
+              <h2 class="hero_title mb_25">Unleash your creativity</h2>
+              <p class="mb_25">
+                Johannes is a theme carefully designed and developed to get the
+                most out of the new WordPress editor. Unleash the power of
+                blocks - an awesome new way of creating rich content in
+                WordPress!
+              </p>
+              <div class="btn_primery"><a href="#">Find out more</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="feature_ mb_50">
+      <div class="container">
+        <div class="section_head">
+          <div class="section_title">Featured articles</div>
+        </div>
+        <div class="section_content row justify-content-center">
+          <div class="col-6 col-md-4">
+            <div class="cat_box">item 1</div>
+          </div>
+          <div class="col-6 col-md-4">
+            <div class="cat_box">item 2</div>
+          </div>
+          <div class="col-6 col-md-4">
+            <div class="cat_box">item 3</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="latest_ mb_50">
+      <div class="container">
+        <div class="section_head">
+          <div class="section_title">Featured articles</div>
+        </div>
+        <div class="section_content row justify-content-center">
+          <div class="col-12 col-lg-8">
+            <div class="row post_items">
+              <div class="col-12">
+                <article class="mb_50">
+                  <div class="row justify-content-center">
+                    <div class="col-12">
+                      <div class="post_media">
+                        <a href="#">
+                          <img src="images/posts/post.png" />
+                        </a>
+                      </div>
+                    </div>
+                    <div class="col-12 col-md-9 col-lg-9">
+                      <div class="post_item">
+                        <div class="post_categry">
+                          <a href="#" rel="tag" class="cat_item">Motivation</a>
+                        </div>
+                        <div class="post_title">
+                          <a href="#">
+                            It’s ok to work in a bar while getting a degree
+                          </a>
+                        </div>
+                        <div class="author_tag">
+                          <div class="author_name">
+                            by<span>
+                              <a href="#">
+                                Admin
+                              </a></span
+                            >
+                          </div>
+                        </div>
+                        <div class="post_content">
+                          <p>
+                            Progressively evolve functional niches without
+                            ethical architectures. Uniquely plagiarize cost
+                            effective infomediaries vis-a-vis world-class
+                            process improvements. Monotonectally disseminate
+                            stand-alone results for virtual processes.
+                            Competently...
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </article>
+              </div>
+              <div class="col-12">
+                <article class="mb_50">
+                  <div class="row justify-content-center">
+                    <div class="col-12">
+                      <div class="post_media">
+                        <a href="#">
+                          <img src="images/posts/post.png" />
+                        </a>
+                      </div>
+                    </div>
+                    <div class="col-12 col-md-9 col-lg-9">
+                      <div class="post_item">
+                        <div class="post_categry">
+                          <a href="#" rel="tag" class="cat_item">Motivation</a>
+                        </div>
+                        <div class="post_title">
+                          <a href="#">
+                            It’s ok to work in a bar while getting a degree
+                          </a>
+                        </div>
+                        <div class="author_tag">
+                          <div class="author_name">
+                            by<span>
+                              <a href="#">
+                                Admin
+                              </a></span
+                            >
+                          </div>
+                        </div>
+                        <div class="post_content">
+                          <p>
+                            Progressively evolve functional niches without
+                            ethical architectures. Uniquely plagiarize cost
+                            effective infomediaries vis-a-vis world-class
+                            process improvements. Monotonectally disseminate
+                            stand-alone results for virtual processes.
+                            Competently...
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </article>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-4">
+            <aside class="sticky">
+              <div class="widget">
+                <div class="widget_title">Topics</div>
+                <div class="widget_content">
+                  <ul>
+                    <li>
+                      <a href="#">Fashion</a>
+                      <span class="dots"></span>
+                      <span class="count">9</span>
+                    </li>
+                    <li>
+                      <a href="#">Fashion</a>
+                      <span class="dots"></span>
+                      <span class="count">9</span>
+                    </li>
+                    <li>
+                      <a href="#">Fashion</a>
+                      <span class="dots"></span>
+                      <span class="count">9</span>
+                    </li>
+                    <li>
+                      <a href="#">Fashion</a>
+                      <span class="dots"></span>
+                      <span class="count">9</span>
+                    </li>
+                    <li>
+                      <a href="#">Fashion</a>
+                      <span class="dots"></span>
+                      <span class="count">9</span>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="widget">
+                <div class="widget_title">Topics</div>
+                <div class="widget_content">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Mollitia rem eum expedita quaerat alias laborum doloribus
+                    officia vero, quas tenetur, recusandae sequi provident
+                    voluptas perspiciatis necessitatibus maxime illum sed
+                    repellat?
+                  </p>
+                </div>
+              </div>
+              <div class="widget">
+                <div class="widget_title">Topics</div>
+                <div class="widget_content">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Mollitia rem eum expedita quaerat alias laborum doloribus
+                    officia vero,
+                  </p>
+                  <div class="btn_block">
+                    <a href="#" class="subs_btn"> Sibscribe </a>
+                  </div>
+                </div>
+              </div>
+            </aside>
+          </div>
+          <div class="col-12">
+            <nav class="pagination">
+              <div class="prev"><a href="#">New Entries</a></div>
+              <div class="next"><a href="#">Older Entries</a></div>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
