--- a/index.html
+++ b/index.html
@@ -55,19 +55,40 @@
         </div>
       </div>
     </nav>
-    <section id="about_section">
+    <section id="main_section">
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-sm-6">
-            <img src="images/img.png" />
+        <div class="row align-items-center justify-content-center pt-5">
+          <div class="col-12 col-md-5">
+            <div class="hero_">
+              <img src="images/img.png" />
+            </div>
           </div>
-          <div class="col-sm-6">
-            <div class="about_wrapper">
-              <p>Hi There!</p>
+          <div class="col-12 col-md-5">
+            <div class="hero_content">
+              <h2 class="hero_title mb_25">Unleash your creativity</h2>
+              <p class="mb_25">
+                Johannes is a theme carefully designed and developed to get the
+                most out of the new WordPress editor. Unleash the power of
+                blocks - an awesome new way of creating rich content in
+                WordPress!
+              </p>
+              <div class="btn_primery"><a href="#">Find out more</a></div>
             </div>
           </div>
         </div>
       </div>
+    </section>
+    <section id="about_section">
+      about
+    </section>
+    <section id="resume_section">
+      resume
+    </section>
+    <section id="service_section">
+      service
+    </section>
+    <section id="news_section">
+      Latest News
     </section>
     <!-- Page Content -->
     <!-- <section id="home_page">
