--- a/index.html
+++ b/index.html
@@ -55,7 +55,17 @@
         </div>
       </div>
     </nav>
-    <section id="main_section">
+    <div class="pageHeader">
+      <span>Home Page</span>
+    </div>
+    <div class="line_pagination">
+      <span class="active"></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <section id="main_section" class="relative_">
       <div class="container">
         <div class="row align-items-center justify-content-center pt-5">
           <div class="col-12 col-md-5">
