--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="google-site-verification"
-      content="TMZkjcHD7OznK0ebVgWsxe3oODOxT699p0S8z3zzsH4"
-    />
+    <meta name="google-site-verification" content="bsW-UlZot-K_M36Ld0GdGRXqJZD780lNMeyDzKqHHPg" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
